--- a/tools/form/index.html
+++ b/tools/form/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>rev14 Interdepartmental Forms - Locking Demo</title>
+<title>rev15 Interdepartmental Forms - Locking Demo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body { font-family: Arial, sans-serif; margin: 40px; background-color: #f5f5f5; }
@@ -28,7 +28,7 @@
     <button class="logout-btn" id="logoutBtn" onclick="logout()" style="display:none;">Logout</button>
 </div>
 
-<h1>Interdepartmental Stamping Forms</h1>
+<h1>rev15 Interdepartmental Stamping Forms</h1>
 
 <table id="formsTable">
     <tbody>
