--- a/tools/form/form_link/form_link.html
+++ b/tools/form/form_link/form_link.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Folder Links</title>
+    <title>Server & Local Folder Links</title>
     <style>
         :root {
             --primary: #3498db;
@@ -13,21 +13,15 @@
             --text: #333;
             --shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, Arial, sans-serif;
             max-width: 800px;
             margin: 40px auto;
             padding: 20px;
             background-color: var(--bg);
             color: var(--text);
         }
-
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-        }
-
+        h1 { text-align: center; color: #2c3e50; }
         #add-button {
             background-color: var(--primary);
             color: white;
@@ -37,83 +31,111 @@
             border-radius: 6px;
             cursor: pointer;
             margin-bottom: 30px;
-            transition: background-color 0.3s;
         }
-
-        #add-button:hover {
-            background-color: var(--primary-hover);
-        }
-
-        #links-container {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
-
+        #add-button:hover { background-color: var(--primary-hover); }
+        #links-container { display: flex; flex-direction: column; gap: 12px; }
         .folder-link {
             background-color: var(--card-bg);
             padding: 15px;
             border-radius: 8px;
             box-shadow: var(--shadow);
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: all 0.2s;
         }
-
         .folder-link:hover {
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(0,0,0,0.15);
         }
-
         .folder-link a {
             color: var(--primary);
             text-decoration: none;
             font-size: 18px;
             word-break: break-all;
         }
-
-        .folder-link a:hover {
-            text-decoration: underline;
-        }
-
+        .folder-link a:hover { text-decoration: underline; }
         .empty-message {
             text-align: center;
             color: #777;
             font-style: italic;
             margin-top: 50px;
         }
+        .android-note {
+            background: #e8f4fd;
+            padding: 12px;
+            border-radius: 8px;
+            font-size: 14px;
+            margin-bottom: 20px;
+            border-left: 4px solid var(--primary);
+        }
     </style>
 </head>
 <body>
-    <h1>My Server Folder Links</h1>
-    
-    <button id="add-button">Add Server Folder Link</button>
+    <h1>My Folder Links</h1>
+
+    <div class="android-note">
+        <strong>Tip for Android:</strong> Paste paths like:<br>
+        • /Internal storage/Download/laptop<br>
+        • /storage/emulated/0/Download/MyFolder<br>
+        • Or any folder path shown in your file manager
+    </div>
+
+    <button id="add-button">Add Folder Link</button>
     
     <div id="links-container">
-        <div class="empty-message">No links added yet. Click the button above to add one!</div>
+        <div class="empty-message">No links added yet. Click the button to add one!</div>
     </div>
 
     <script type="module">
-        // DOM Elements
         const elements = {
             addButton: document.getElementById('add-button'),
             linksContainer: document.getElementById('links-container'),
             emptyMessage: document.querySelector('.empty-message')
         };
 
-        // Utility Functions
         const utils = {
-            isValidUrl(input) {
-                return typeof input === 'string' && input.trim() !== '';
+            // Normalize and convert Android paths to proper file:// or intent URL
+            convertToWorkingUrl(path) {
+                let cleanPath = path.trim();
+
+                // Handle common Android display paths
+                if (cleanPath.startsWith('/Internal storage/')) {
+                    cleanPath = '/storage/emulated/0' + cleanPath.substring('/Internal storage'.length);
+                }
+
+                // If it's a local Android path starting with /storage or /
+                if (cleanPath.startsWith('/storage/emulated/0/') || cleanPath.startsWith('/sdcard/')) {
+                    const encodedPath = encodeURIComponent(cleanPath);
+                    // Use Android intent to open folder reliably
+                    return `intent:#Intent;action=android.intent.action.VIEW;type=inode/directory;scheme=file;launchFlags=0x10000000;package=com.google.android.documentsui;S.path=${encodedPath};end`;
+                }
+
+                // For Windows network paths: \\server\share
+                if (cleanPath.startsWith('\\\\')) {
+                    return cleanPath; // Let OS handle UNC paths (works on Windows)
+                }
+
+                // For file:// URLs
+                if (cleanPath.startsWith('file://')) {
+                    return cleanPath;
+                }
+
+                // Fallback: assume it's a valid URL or path
+                return cleanPath;
             },
 
-            createLinkElement(url) {
+            createLinkElement(url, displayText) {
                 const linkDiv = document.createElement('div');
                 linkDiv.className = 'folder-link';
 
                 const anchor = document.createElement('a');
                 anchor.href = url;
-                anchor.textContent = url;
+                anchor.textContent = displayText || url;
                 anchor.target = '_blank';
-                anchor.rel = 'noopener'; // Security best practice
+                anchor.rel = 'noopener';
+
+                // Special hint for Android users
+                if (url.includes('intent:')) {
+                    anchor.title = 'Opens in Files app (Android)';
+                }
 
                 linkDiv.appendChild(anchor);
                 return linkDiv;
@@ -127,17 +149,17 @@
             }
         };
 
-        // Main Link Manager
         const linkManager = {
-            addLink(url) {
-                const trimmedUrl = url.trim();
-
-                if (!utils.isValidUrl(trimmedUrl)) {
-                    alert('Please enter a valid folder link.');
+            addLink(rawPath) {
+                if (!rawPath || rawPath.trim() === '') {
+                    alert('Please enter a valid folder path.');
                     return false;
                 }
 
-                const linkElement = utils.createLinkElement(trimmedUrl);
+                const workingUrl = utils.convertToWorkingUrl(rawPath);
+                const displayText = rawPath.trim(); // Show original path (user-friendly)
+
+                const linkElement = utils.createLinkElement(workingUrl, displayText);
                 elements.linksContainer.appendChild(linkElement);
                 utils.removeEmptyMessage();
 
@@ -145,12 +167,9 @@
             },
 
             promptAndAdd() {
-                const userInput = prompt('Paste the server folder link (e.g., \\\\server\\share or file:///C:/folder):');
+                const userInput = prompt('Paste your folder path:\n\nExamples:\n• /Internal storage/Download/laptop\n• \\\\server\\shared\n• file:///C:/Users/Name/Documents', '');
 
-                // Cancel button pressed
-                if (userInput === null) {
-                    return;
-                }
+                if (userInput === null) return; // Cancelled
 
                 this.addLink(userInput);
             },
@@ -162,7 +181,7 @@
             }
         };
 
-        // Initialize the app
+        // Start the app
         linkManager.init();
     </script>
 </body>
