--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="tool-card">
           <h3>Form</h3>
           <p>Form Stamping</p>
-          <a href="tools/form/index.html">Open</a>
+          <a href="tools/form/form_lock/form_lock.html">Open</a>
         </div>
 
 
