--- a/tools/database/cnc_database/cnc_database.html
+++ b/tools/database/cnc_database/cnc_database.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CNC Machine Database</title>
-  <small style="display: block; text-align: center; color: #888; margin-bottom: 15px; font-size: 11px;">
-    Rev: 003
-  </small>
+  <title>Rev: 004</title>    
   <link rel="stylesheet" href="cnc_database.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
