--- a/tools/database/cnc_database/cnc_database.html
+++ b/tools/database/cnc_database/cnc_database.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CNC Machine Database</title>
-  <title>Rev: 004</title>    
+  <title>CNC Machine Database | Rev: 004</title>
   <link rel="stylesheet" href="cnc_database.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
