--- a/tools/database/cnc_database/cnc_database.html
+++ b/tools/database/cnc_database/cnc_database.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CNC Machine Database | Rev: 004</title>
+  <title>CNC Machine Database</title>
   <link rel="stylesheet" href="cnc_database.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -23,7 +23,7 @@
     <!-- In the Builders Page section -->
 <div id="builders-page">
   <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-    <h1>Machine Builders</h1>
+    <h1>Machine Builders | Rev: 004</h1>
     <div style="display: flex; gap: 10px;">
       <button id="reset-all-btn" class="reset-btn" title="Reset all data to default">
         <i class="fas fa-undo"></i> Reset All to Default
