--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="tool-card">
           <h3>Fast Search</h3>
           <p>Fast search for web app</p>
-          <a href="tools/search/websearch.html">Open</a>
+          <a href="tools/form/form_search/form_search.html">Open</a>
         </div>
 
 
