Add JSON Viewer tool section to index.html

--- a/index.html
+++ b/index.html
@@ -214,6 +214,23 @@
 
 
 
+
+
+    <!-- Coding Section -->
+    <div class="section">
+      <h2 class="section-title">CODING</h2>
+      <div class="tools-grid">
+        <div class="tool-card">
+          <h3>JSON Viewer</h3>
+          <p>Simple Viewer for JSON</p>
+          <a href="tools/coding/json_viewer/json_viewer.html">Open</a>
+        </div>    
+      </div>
+    </div>
+
+
+
+
     
 
     
