--- a/tools/form/form_lock/form.html
+++ b/tools/form/form_lock/form.html
@@ -2,13 +2,42 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>rev13 Form Viewer</title>
+<title>Form Viewer Rev04</title>
 <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f9f9f9; }
-    .user-info { background-color: #e3f2fd; padding: 10px 15px; border-radius: 6px; display: inline-block; font-weight: bold; margin-bottom: 20px; color: #1976d2; }
-    .readonly { opacity: 0.7; pointer-events: none; }
-    button { padding: 10px 20px; margin: 10px 10px 10px 0; cursor: pointer; }
-    .force-unlock { background-color: #f44336; color: white; }
+    body { 
+        font-family: Arial, sans-serif; 
+        margin: 40px; 
+        background: #f9f9f9; 
+    }
+    h1 { 
+        color: #333; 
+    }
+    .user-info {
+        background-color: #e3f2fd;
+        padding: 10px 15px;
+        border-radius: 6px;
+        display: inline-block;
+        font-weight: bold;
+        margin-bottom: 20px;
+        color: #1976d2;
+    }
+    .readonly { 
+        background: #eee; 
+        color: #666; 
+    }
+    .readonly input, .readonly textarea {
+        background: #f5f5f5;
+    }
+    button { 
+        padding: 10px 20px; 
+        font-size: 16px; 
+        margin: 10px 10px 10px 0; 
+        cursor: pointer;
+    }
+    button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
 </style>
 </head>
 <body>
@@ -25,58 +54,87 @@
     <label>Comments: <textarea id="comments" rows="5" cols="50"></textarea></label><br><br>
     <button onclick="saveForm()">Save Changes</button>
     <button onclick="closeForm()">Close / Unlock</button>
-    <button class="force-unlock" onclick="forceUnlock()">Force Unlock (testing)</button>
+    <button onclick="window.location.reload()">Refresh Status</button>
 </div>
 
 <script>
+// Get URL parameters
 const params = new URLSearchParams(location.search);
-const formId = params.get('form') || 'Unknown';
-const urlUser = params.get('user') || 'Unknown';
+const formId = params.get('form');
 const canEdit = params.get('edit') === '1';
 
-document.getElementById('currentUser').textContent = urlUser;
-document.getElementById('formId').textContent = 'Form: ' + formId;
+// Get username from localStorage (set in index.html when user first logs in)
+let currentUser = localStorage.getItem('currentDemoUser');
 
-if (canEdit) {
-    document.getElementById('mode').textContent = 'You are editing this form (full access).';
-} else {
+// Fallback: if not found, get from prompt (for direct access)
+if (!currentUser) {
+    currentUser = prompt("Enter your username:", "UserA") || "UserA";
+    localStorage.setItem('currentDemoUser', currentUser);
+}
+
+// Display the username at the top
+document.getElementById('currentUser').textContent = currentUser;
+
+document.getElementById('formId').textContent = 'Form: ' + (formId || 'Unknown');
+document.getElementById('mode').textContent = canEdit 
+    ? 'You are editing this form.' 
+    : 'READ-ONLY: This form is being edited by another user.';
+
+if (!canEdit) {
     document.getElementById('formContent').classList.add('readonly');
-    document.getElementById('mode').textContent = 'READ-ONLY: Locked by another user.';
+    document.querySelectorAll('input, textarea, button:first-of-type').forEach(el => el.disabled = true);
 }
 
 function saveForm() {
-    if (!canEdit) {
-        alert('Cannot save in read-only mode.');
-        return;
-    }
-    alert('Changes saved successfully for ' + formId + '!\n(Demo only - in real app, this would submit to server)');
+    alert('Changes saved for ' + formId + ' (demo only)\nUser: ' + currentUser);
 }
 
 function closeForm() {
-    if (canEdit) {
-        localStorage.removeItem('lock_' + formId);
-        alert('Form unlocked.');
+    const lockKey = 'lock_' + formId;
+    const lockData = localStorage.getItem(lockKey);
+    if (lockData) {
+        const parsed = JSON.parse(lockData);
+        if (parsed.user === currentUser) {
+            if (confirm(`Unlock form ${formId} and close?`)) {
+                localStorage.removeItem(lockKey);
+                alert("Form unlocked successfully.");
+                window.close();
+            }
+            return;
+        }
     }
+    // If not locked by this user, just close
     window.close();
 }
 
-function forceUnlock() {
-    if (confirm('Force unlock?')) {
-        localStorage.removeItem('lock_' + formId);
-        alert('Unlocked!');
-        location.reload();
+// Heartbeat: Keep the lock alive every 30 seconds
+setInterval(() => {
+    const lockKey = 'lock_' + formId;
+    const lockData = localStorage.getItem(lockKey);
+    if (lockData) {
+        const parsed = JSON.parse(lockData);
+        if (parsed.user === currentUser) {
+            parsed.timestamp = Date.now();
+            localStorage.setItem(lockKey, JSON.stringify(parsed));
+        }
     }
-}
+}, 30000);
 
-// Keep lock alive if in edit mode
-if (canEdit) {
-    setInterval(() => {
-        localStorage.setItem('lock_' + formId, JSON.stringify({
-            user: urlUser,
-            timestamp: Date.now()
-        }));
-    }, 20000);
-}
+// Optional: Auto-unlock on tab close (best effort)
+window.addEventListener('beforeunload', () => {
+    const lockKey = 'lock_' + formId;
+    const lockData = localStorage.getItem(lockKey);
+    if (lockData) {
+        const parsed = JSON.parse(lockData);
+        if (parsed.user === currentUser) {
+            // Try to unlock (navigator.sendBeacon is more reliable)
+            navigator.sendBeacon && navigator.sendBeacon(location.origin + location.pathname, JSON.stringify({ unlock: formId }));
+            // Fallback: just remove locally
+            localStorage.removeItem(lockKey);
+        }
+    }
+});
 </script>
+
 </body>
 </html>
