--- a/tools/form/form_lock/form.html
+++ b/tools/form/form_lock/form.html
@@ -2,139 +2,210 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Form Viewer Rev04</title>
+<title>Form Viewer - Real-Time Locking</title>
 <style>
-    body { 
-        font-family: Arial, sans-serif; 
-        margin: 40px; 
-        background: #f9f9f9; 
+    body {
+        font-family: 'Segoe UI', Arial, sans-serif;
+        margin: 40px;
+        background-color: #f8fafc;
+        color: #333;
+        line-height: 1.6;
     }
-    h1 { 
-        color: #333; 
-    }
+
     .user-info {
-        background-color: #e3f2fd;
-        padding: 10px 15px;
-        border-radius: 6px;
+        background-color: #e0f2fe;
+        padding: 14px 24px;
+        border-radius: 12px;
         display: inline-block;
-        font-weight: bold;
-        margin-bottom: 20px;
-        color: #1976d2;
+        font-weight: 600;
+        font-size: 17px;
+        margin-bottom: 28px;
+        color: #0369a1;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+        border-left: 5px solid #0ea5e9;
     }
-    .readonly { 
-        background: #eee; 
-        color: #666; 
-    }
-    .readonly input, .readonly textarea {
-        background: #f5f5f5;
-    }
-    button { 
-        padding: 10px 20px; 
-        font-size: 16px; 
-        margin: 10px 10px 10px 0; 
-        cursor: pointer;
-    }
-    button:disabled {
+
+    .readonly {
         opacity: 0.6;
+        pointer-events: none;
+        filter: grayscale(30%);
+        transition: opacity 0.2s ease;
+    }
+
+    button {
+        padding: 11px 22px;
+        margin: 10px 10px 10px 0;
+        cursor: pointer;
+        border: none;
+        border-radius: 8px;
+        font-weight: 500;
+        font-size: 15px;
+        transition: all 0.2s ease;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    button:not(.force-unlock) {
+        background-color: #3b82f6;
+        color: white;
+    }
+
+    button:not(.force-unlock):hover {
+        background-color: #2563eb;
+        transform: translateY(-1px);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    button:not(.force-unlock):active {
+        transform: translateY(0);
+    }
+
+    .force-unlock {
+        background-color: #ef4444;
+        color: white;
+        font-weight: 600;
+    }
+
+    .force-unlock:hover {
+        background-color: #dc2626;
+        transform: translateY(-1px);
+        box-shadow: 0 4px 12px rgba(239, 68, 68, 0.3);
+    }
+
+    .force-unlock:active {
+        transform: translateY(0);
+    }
+
+    button:disabled {
+        background-color: #94a3b8 !important;
         cursor: not-allowed;
+        opacity: 0.7;
+        transform: none !important;
+        box-shadow: none;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+        body {
+            margin: 20px;
+        }
+
+        .user-info {
+            font-size: 16px;
+            padding: 12px 18px;
+            display: block;
+        }
+
+        button {
+            padding: 12px 20px;
+            width: 100%;
+            margin: 8px 0;
+        }
     }
 </style>
 </head>
 <body>
 
 <div class="user-info">
-    Current User: <span id="currentUser">Loading...</span>
+    Current User: <span id="currentUser"></span> | Form: <span id="formId"></span>
 </div>
 
-<h1 id="formId">Form Loading...</h1>
-<p id="mode">Loading...</p>
+<p id="mode"></p>
 
 <div id="formContent">
     <label>Department Approval: <input type="text" id="approval"></label><br><br>
     <label>Comments: <textarea id="comments" rows="5" cols="50"></textarea></label><br><br>
     <button onclick="saveForm()">Save Changes</button>
     <button onclick="closeForm()">Close / Unlock</button>
-    <button onclick="window.location.reload()">Refresh Status</button>
+    <button class="force-unlock" onclick="forceUnlock()">Force Unlock (testing)</button>
 </div>
 
+<script src="/socket.io/socket.io.js"></script>
 <script>
-// Get URL parameters
+const socket = io();
 const params = new URLSearchParams(location.search);
-const formId = params.get('form');
-const canEdit = params.get('edit') === '1';
+const formId = params.get('form') || 'Unknown';
+const user = params.get('user') || 'Unknown';
 
-// Get username from localStorage (set in index.html when user first logs in)
-let currentUser = localStorage.getItem('currentDemoUser');
+let canEdit = false;
+let heartbeatInterval = null;
 
-// Fallback: if not found, get from prompt (for direct access)
-if (!currentUser) {
-    currentUser = prompt("Enter your username:", "UserA") || "UserA";
-    localStorage.setItem('currentDemoUser', currentUser);
-}
+document.getElementById('currentUser').textContent = user;
+document.getElementById('formId').textContent = formId;
 
-// Display the username at the top
-document.getElementById('currentUser').textContent = currentUser;
+// Try to acquire lock
+socket.emit('acquireLock', { formId, user });
 
-document.getElementById('formId').textContent = 'Form: ' + (formId || 'Unknown');
-document.getElementById('mode').textContent = canEdit 
-    ? 'You are editing this form.' 
-    : 'READ-ONLY: This form is being edited by another user.';
-
-if (!canEdit) {
+socket.on('lockDenied', ({user: holder}) => {
+    canEdit = false;
+    document.getElementById('mode').textContent = `READ-ONLY: Currently locked by ${holder}`;
     document.getElementById('formContent').classList.add('readonly');
-    document.querySelectorAll('input, textarea, button:first-of-type').forEach(el => el.disabled = true);
+});
+
+// Lock acquired successfully
+socket.on('connect', () => {
+    // Re-try on reconnect
+    socket.emit('acquireLock', { formId, user });
+});
+
+socket.on('lockUpdate', ({formId: updatedId, user: updatedUser}) => {
+    if (updatedId === formId && updatedUser !== user && canEdit) {
+        // Someone else took it? Shouldn't happen, but force read-only
+        canEdit = false;
+        document.getElementById('mode').textContent = 'READ-ONLY: Lock lost!';
+        document.getElementById('formContent').classList.add('readonly');
+        clearInterval(heartbeatInterval);
+    }
+});
+
+// Successful lock acquisition (also triggered on reconnect if still yours)
+function startEditing() {
+    canEdit = true;
+    document.getElementById('mode').textContent = 'You are editing this form (full access).';
+    
+    // Start heartbeat
+    heartbeatInterval = setInterval(() => {
+        socket.emit('heartbeat', { formId, user });
+    }, 5000);
 }
+
+
+
+
+// Initial response
+socket.once('lockUpdate', ({formId: id, user: lockedUser}) => {
+    if (id === formId && lockedUser === user) {
+        startEditing();
+    }
+});
 
 function saveForm() {
-    alert('Changes saved for ' + formId + ' (demo only)\nUser: ' + currentUser);
+    if (!canEdit) {
+        alert('Cannot save in read-only mode.');
+        return;
+    }
+    alert('Changes saved successfully for ' + formId + '!\n(In real app: send to server)');
 }
 
 function closeForm() {
-    const lockKey = 'lock_' + formId;
-    const lockData = localStorage.getItem(lockKey);
-    if (lockData) {
-        const parsed = JSON.parse(lockData);
-        if (parsed.user === currentUser) {
-            if (confirm(`Unlock form ${formId} and close?`)) {
-                localStorage.removeItem(lockKey);
-                alert("Form unlocked successfully.");
-                window.close();
-            }
-            return;
-        }
+    if (canEdit) {
+        socket.emit('releaseLock', { formId, user });
+        clearInterval(heartbeatInterval);
     }
-    // If not locked by this user, just close
     window.close();
 }
 
-// Heartbeat: Keep the lock alive every 30 seconds
-setInterval(() => {
-    const lockKey = 'lock_' + formId;
-    const lockData = localStorage.getItem(lockKey);
-    if (lockData) {
-        const parsed = JSON.parse(lockData);
-        if (parsed.user === currentUser) {
-            parsed.timestamp = Date.now();
-            localStorage.setItem(lockKey, JSON.stringify(parsed));
-        }
+function forceUnlock() {
+    if (confirm('Force unlock this form?')) {
+        socket.emit('releaseLock', { formId, user: 'admin' }); // bypass check for testing
+        location.reload();
     }
-}, 30000);
+}
 
-// Optional: Auto-unlock on tab close (best effort)
 window.addEventListener('beforeunload', () => {
-    const lockKey = 'lock_' + formId;
-    const lockData = localStorage.getItem(lockKey);
-    if (lockData) {
-        const parsed = JSON.parse(lockData);
-        if (parsed.user === currentUser) {
-            // Try to unlock (navigator.sendBeacon is more reliable)
-            navigator.sendBeacon && navigator.sendBeacon(location.origin + location.pathname, JSON.stringify({ unlock: formId }));
-            // Fallback: just remove locally
-            localStorage.removeItem(lockKey);
-        }
+    if (canEdit) {
+        socket.emit('releaseLock', { formId, user });
     }
 });
 </script>
-
 </body>
 </html>
